# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    #"tracking/common",
]

[package]
version = "0.0.0"
name = "rust-reviews"
publish = false
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"

[dependencies]
crates-index = "=0.15.2"
mustache = "0.9"
glob = "0.3"

[features]
default = []
