# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
version = "0.0.0"
name = "rust-reviews-dinghy"
publish = false
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"

[dev-dependencies]

# Android
# NOTE:  dinghy is lagging behind on libgit2-sys dependency (0.7.x) which conflicts with cargo-edit 0.4.0 (depends on 0.8.x)
cargo-dinghy            = "=0.4.16"
dinghy-build            = "=0.4.16"
dinghy-lib              = "=0.4.16"
